contrast and robots.txt fixes

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
 
 .dark {
   --background: oklch(30.139% 0.0058 17.156);
-  --foreground: oklch(12.964% 0.02739 261.707);
+  --foreground: oklch(0.984 0.003 247.858);
   --card: oklch(0.208 0.042 265.755);
   --card-foreground: oklch(0.984 0.003 247.858);
   --popover: oklch(0.208 0.042 265.755);
